--- a/note.html
+++ b/note.html
@@ -19,7 +19,7 @@
 
     <body>
         <div id="editSection">
-            <div>
+            <div id="Description">
                 <p> hi</p>
                 <textarea id="noteTextArea"></textarea>
             </div>
