--- a/note.html
+++ b/note.html
@@ -19,13 +19,17 @@
 
     <body>
         <div id="editSection">
-            <div id="Description">
-                <p> hi</p>
-                <textarea id="noteTextArea"></textarea>
+            <div >
+                <h1 id="description"> 
+                </h1>
+                <textarea id="noteTextArea" required placeholder="format de réponse William Shakespeare">
+                    
+                </textarea>
             </div>
             <div>
-                <button id="saveButton">Save</button>
+                <button id="savedButton">Enregistrer votre reponse</button>
             </div>
+            
         </div>
         <pre id="displayText"></pre>
     </body>
