--- a/note.html
+++ b/note.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <style>
-            body {
-                background-color: white;
-            }
-            textarea {
-                width: 100%;
-                height: 100px;
-            }
-            pre {
-                text-align: center;
-            }
-        </style>
-        <script src="https://play.workadventu.re/iframe_api.js"></script>
-        <script type="module" src="./src/note.ts"></script>
-    </head>
-
-    <body>
-        <div id="editSection">
-            <div >
-                <h1 id="description"> 
-                </h1>
-                <textarea id="noteTextArea" required placeholder="format de réponse William Shakespeare">
-                    
-                </textarea>
-            </div>
-            <div>
-                <button id="savedButton">Enregistrer votre reponse</button>
-            </div>
-            
+<head>
+    <style>
+        body {
+            background-color: white;
+        }
+        textarea {
+            width: 100%;
+            height: 100px;
+        }
+        pre {
+            text-align: center;
+        }
+    </style>
+    <script src="https://play.workadventu.re/iframe_api.js"></script>
+    <script type="module" src="./src/note.ts"></script>
+</head>
+<body>
+    <div id="editSection">
+        <div >
+            <h1 id="description"> </h1>
+            <textarea id="noteTextArea" required placeholder="format de réponse William Shakespeare"></textarea>
         </div>
-        <pre id="displayText"></pre>
-    </body>
-</html> 
+        <div>
+            <button id="savedButton">Enregistrer votre réponse</button>
+        </div>
+    </div>
+    <pre id="displayText"></pre>
+    <div id="scoreDisplay" style="display: none;">
+        <h2>Score: <span id="score">0</span></h2>
+    </div>
+</body>
+</html>
