--- a/modals/welcome/index.html
+++ b/modals/welcome/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://play.staging.workadventu.re/iframe_api.js"></script>
+    <script src="https://play.workadventu.re/iframe_api.js"></script>
     <script src="script.ts" type="module"></script>
     <link rel="stylesheet" href="../../src/assets/index.css" />
   </head>
