--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
       window.onload = function () {
         const host = window.location.host;
         let path = window.location.pathname;
-        if (path.endsWith('index.html')) {
-          path = path.substr(path, path.length - 'index.html'.length);
+        if (path.endsWith("index.html")) {
+          path = path.substr(path, path.length - "index.html".length);
         }
         const instanceId = Math.random().toString(36).substring(2, 15);
-        const url = `https://play.workadventu.re/_/${instanceId}/${host}${path}test.tmj`;
-        document.getElementById('testMapURL').href = url;
-        document.getElementById('testMapBtnURL').href = url;
-        document.getElementById('testMapURL').innerText = url;
+        const url = `https://play.workadventu.re/_/${instanceId}/${host}${path}flopstory.tmj`;
+        document.getElementById("testMapURL").href = url;
+        document.getElementById("testMapBtnURL").href = url;
+        document.getElementById("testMapURL").innerText = url;
 
         const tmjURL =
           window.location.protocol +
-          '//' +
+          "//" +
           window.location.host +
           path +
-          'map.tmj';
-        document.getElementById('tmjURL').innerText = tmjURL;
+          "map.tmj";
+        document.getElementById("tmjURL").innerText = tmjURL;
 
         const gettingStartedLink =
-          'https://workadventu.re/getting-started?name=Map&mapUrl=' + tmjURL;
-        document.getElementById('gettingStartedLink').href = gettingStartedLink;
+          "https://workadventu.re/getting-started?name=Map&mapUrl=" + tmjURL;
+        document.getElementById("gettingStartedLink").href = gettingStartedLink;
       };
     </script>
     <style>
@@ -135,7 +135,7 @@
       }
 
       .url {
-        font-family: 'Courier New', Courier, monospace;
+        font-family: "Courier New", Courier, monospace;
         font-size: 14px;
       }
 
@@ -153,7 +153,8 @@
           <a
             href="https://workadventu.re/"
             target="_blank"
-            title="Workadventure">
+            title="Workadventure"
+          >
             <img src="/images/logo.svg" alt="WorkAdventure logo" />
           </a>
         </div>
@@ -186,37 +187,43 @@
               <a
                 href="https://discord.gg/G6Xh9ZM9aR"
                 target="_blank"
-                title="discord">
+                title="discord"
+              >
                 <img src="/images/discord.png" alt="discord" />
               </a>
               <a
                 href="https://github.com/thecodingmachine/workadventure"
                 target="_blank"
-                title="github">
+                title="github"
+              >
                 <img src="/images/github.png" alt="github" />
               </a>
               <a
                 href="https://www.youtube.com/channel/UCXJ9igV-kb9gw1ftR33y5tA"
                 target="_blank"
-                title="youtube">
+                title="youtube"
+              >
                 <img src="/images/youtube.png" alt="youtube" />
               </a>
               <a
                 href="https://twitter.com/Workadventure_"
                 target="_blank"
-                title="twitter">
+                title="twitter"
+              >
                 <img src="/images/twitter.png" alt="twitter" />
               </a>
               <a
                 href="https://www.instagram.com/workadventure_"
                 target="_blank"
-                title="instagram">
+                title="instagram"
+              >
                 <img src="/images/instagram.png" alt="instagram" />
               </a>
               <a
                 href="https://www.linkedin.com/company/workadventu-re"
                 target="_blank"
-                title="linkedin">
+                title="linkedin"
+              >
                 <img src="/images/linkedin.png" alt="linkedin" />
               </a>
             </div>
