--- a/modals/score/index.html
+++ b/modals/score/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://play.workadventu.re/iframe_api.js"></script>
+    <link rel="stylesheet" href="../../src/assets/index.css" />
   </head>
   <body class="h-screen flex items-center justify-center text-white">
-    <h1>Classement des Joueurs</h1>
-    <ul id="scoresList"></ul>
-    <script>
-      window.addEventListener("message", (event) => {
-        if (event.data && event.data.type === "updateScores") {
-          const players = event.data.scores;
-          const scoresList = document.getElementById("scoresList");
-          scoresList.innerHTML = ""; // On efface les éléments existants
-          players.forEach((player) => {
-            scoresList.innerHTML += `<li>Joueur ${player.playerId}: Total - ${player.totalScore}, Quiz - ${player.quiz}, Devine Qui - ${player.guessWho}, Flop Story - ${player.flopStory}</li>`;
-          });
-        }
-      });
-    </script>
+    <header>
+      <h1
+        class="uppercase flop-heading cursor-default select-none text-6xl inline-block"
+      >
+        Le Classement
+      </h1>
+    </header>
+    <main class="w-full max-w-screen-xl space-y-2 flex justify-center px-2">
+      <ul id="scoresList"></ul>
+    </main>
+
+    <template id="score-row">
+      <li class="group" data-id="0">
+        <span class="font-extrabold group-data-[id=0]:text-3xl"></span>
+        <span class="group-data-[id=0]:text-2xl"></span>
+      </li>
+    </template>
   </body>
 </html>
