--- a/modals/guess-who/index.html
+++ b/modals/guess-who/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flop Story | Devine Qui</title>
     <script src="https://play.workadventu.re/iframe_api.js"></script>
     <script src="script.ts" type="module"></script>
     <link rel="stylesheet" href="../../src/assets/index.css" />
@@ -14,7 +14,7 @@
       <h1
         class="uppercase flop-heading cursor-default select-none text-6xl inline-block"
       >
-        Guess Who
+        Devine Qui ?
       </h1>
     </header>
     <main class="w-full max-w-xl p-8">
