--- a/modals/welcome/index.html
+++ b/modals/welcome/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bienvenue sur FlopStory !</title>
     <script src="https://play.workadventu.re/iframe_api.js"></script>
     <script src="script.ts" type="module"></script>
     <link rel="stylesheet" href="../../src/assets/index.css" />
@@ -33,14 +33,14 @@
       </section>
       <footer class="flex gap-2 justify-end">
         <button
-          class="hidden bg-orange-600 text-white rounded-lg px-4 py-2"
+          class="hidden bg-gradient-to-r to-blue-400/15 via-purple-600/15 from-orange-300/15 hover:to-blue-500/25 hover:via-purple-700/25 hover:from-orange-400/25 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="button"
           id="previousBtn"
         >
           Précédent
         </button>
         <button
-          class="bg-blue-700 text-white rounded-lg px-4 py-2"
+          class="bg-gradient-to-r text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline from-blue-500/50 via-purple-700/50 to-orange-400/50 hover:from-blue-600/80 hover:via-purple-800/80 hover:to-orange-500/80"
           type="button"
           id="nextBtn"
         ></button>
