--- a/modals/quiz/index.html
+++ b/modals/quiz/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flop Story | QUIZ TIME</title>
     <script src="https://play.workadventu.re/iframe_api.js"></script>
     <link rel="stylesheet" href="../../src/assets/index.css" />
   </head>
