--- a/modals/scores/index.html
+++ b/modals/scores/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flop Story | Le Classement</title>
     <script src="https://play.workadventu.re/iframe_api.js"></script>
     <link rel="stylesheet" href="../../src/assets/index.css" />
+    <script src="script.ts" type="module"></script>
   </head>
   <body class="h-screen flex items-center justify-center text-white">
     <header>
